crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_lint_nonsense.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "exit": 2,
  "stdout": ""
}
