crates/specforge-cli/tests/snapshots/tests__check_surfaces__mcp_validate_body_parser_type.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&Value::Array(calls), dir.path())"
---
[
  {
    "arguments": {},
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [
            {
              "code": "W002",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is not referenced by any behavior, port, or type",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unreferenced type"
            },
            {
              "code": "W004",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is testable but declares no verify obligations",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Untested testable entity"
            },
            {
              "code": "W010",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' field 'amount' has unknown annotation '@min'",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unknown field annotation"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "strict": true
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [
            {
              "code": "W002",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is not referenced by any behavior, port, or type",
              "severity": "Error",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unreferenced type"
            },
            {
              "code": "W004",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is testable but declares no verify obligations",
              "severity": "Error",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Untested testable entity"
            },
            {
              "code": "W010",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' field 'amount' has unknown annotation '@min'",
              "severity": "Error",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unknown field annotation"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "error"
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "warning"
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [
            {
              "code": "W002",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is not referenced by any behavior, port, or type",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unreferenced type"
            },
            {
              "code": "W004",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is testable but declares no verify obligations",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Untested testable entity"
            },
            {
              "code": "W010",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' field 'amount' has unknown annotation '@min'",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unknown field annotation"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "info"
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "error",
      "strict": true
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [
            {
              "code": "W002",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is not referenced by any behavior, port, or type",
              "severity": "Error",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unreferenced type"
            },
            {
              "code": "W004",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is testable but declares no verify obligations",
              "severity": "Error",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Untested testable entity"
            },
            {
              "code": "W010",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' field 'amount' has unknown annotation '@min'",
              "severity": "Error",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unknown field annotation"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "Error"
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [
            {
              "code": "W002",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is not referenced by any behavior, port, or type",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unreferenced type"
            },
            {
              "code": "W004",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is testable but declares no verify obligations",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Untested testable entity"
            },
            {
              "code": "W010",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' field 'amount' has unknown annotation '@min'",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unknown field annotation"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "errors"
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [
            {
              "code": "W002",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is not referenced by any behavior, port, or type",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unreferenced type"
            },
            {
              "code": "W004",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is testable but declares no verify obligations",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Untested testable entity"
            },
            {
              "code": "W010",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' field 'amount' has unknown annotation '@min'",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unknown field annotation"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "lint": [
        "nonsense"
      ]
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": [
            {
              "code": "W002",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is not referenced by any behavior, port, or type",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unreferenced type"
            },
            {
              "code": "W004",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' is testable but declares no verify obligations",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Untested testable entity"
            },
            {
              "code": "W010",
              "column": 1,
              "file": "main.spec",
              "line": 4,
              "message": "type 'Money' field 'amount' has unknown annotation '@min'",
              "severity": "Warning",
              "span": {
                "end_col": 2,
                "end_line": 8,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 4
              },
              "suggestion": null,
              "title": "Unknown field annotation"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  }
]
