crates/specforge-cli/tests/snapshots/tests__check_surfaces__mcp_validate_missing_import.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&Value::Array(calls), dir.path())"
---
[
  {
    "arguments": {},
    "result": {
      "_meta": {
        "specforge/check": {
          "errors": 1,
          "infos": 0,
          "ok": false,
          "shown": 1,
          "warnings": 0
        }
      },
      "content": [
        {
          "text": [
            {
              "code": "E025",
              "column": 1,
              "data": {
                "kind": "unresolved_import",
                "path": "missing"
              },
              "file": "main.spec",
              "line": 1,
              "message": "import target not found: missing",
              "severity": "Error",
              "span": {
                "end_col": 14,
                "end_line": 1,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 1
              },
              "suggestion": null,
              "title": "Import resolution failed"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "strict": true
    },
    "result": {
      "_meta": {
        "specforge/check": {
          "errors": 1,
          "infos": 0,
          "ok": false,
          "shown": 1,
          "warnings": 0
        }
      },
      "content": [
        {
          "text": [
            {
              "code": "E025",
              "column": 1,
              "data": {
                "kind": "unresolved_import",
                "path": "missing"
              },
              "file": "main.spec",
              "line": 1,
              "message": "import target not found: missing",
              "severity": "Error",
              "span": {
                "end_col": 14,
                "end_line": 1,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 1
              },
              "suggestion": null,
              "title": "Import resolution failed"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "error"
    },
    "result": {
      "_meta": {
        "specforge/check": {
          "errors": 1,
          "infos": 0,
          "ok": false,
          "shown": 1,
          "warnings": 0
        }
      },
      "content": [
        {
          "text": [
            {
              "code": "E025",
              "column": 1,
              "data": {
                "kind": "unresolved_import",
                "path": "missing"
              },
              "file": "main.spec",
              "line": 1,
              "message": "import target not found: missing",
              "severity": "Error",
              "span": {
                "end_col": 14,
                "end_line": 1,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 1
              },
              "suggestion": null,
              "title": "Import resolution failed"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "warning"
    },
    "result": {
      "_meta": {
        "specforge/check": {
          "errors": 1,
          "infos": 0,
          "ok": false,
          "shown": 0,
          "warnings": 0
        }
      },
      "content": [
        {
          "text": [],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "info"
    },
    "result": {
      "_meta": {
        "specforge/check": {
          "errors": 1,
          "infos": 0,
          "ok": false,
          "shown": 0,
          "warnings": 0
        }
      },
      "content": [
        {
          "text": [],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "error",
      "strict": true
    },
    "result": {
      "_meta": {
        "specforge/check": {
          "errors": 1,
          "infos": 0,
          "ok": false,
          "shown": 1,
          "warnings": 0
        }
      },
      "content": [
        {
          "text": [
            {
              "code": "E025",
              "column": 1,
              "data": {
                "kind": "unresolved_import",
                "path": "missing"
              },
              "file": "main.spec",
              "line": 1,
              "message": "import target not found: missing",
              "severity": "Error",
              "span": {
                "end_col": 14,
                "end_line": 1,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 1
              },
              "suggestion": null,
              "title": "Import resolution failed"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "Error"
    },
    "result": {
      "_meta": {
        "specforge/check": {
          "errors": 1,
          "infos": 0,
          "ok": false,
          "shown": 1,
          "warnings": 0
        }
      },
      "content": [
        {
          "text": [
            {
              "code": "E025",
              "column": 1,
              "data": {
                "kind": "unresolved_import",
                "path": "missing"
              },
              "file": "main.spec",
              "line": 1,
              "message": "import target not found: missing",
              "severity": "Error",
              "span": {
                "end_col": 14,
                "end_line": 1,
                "file": "main.spec",
                "start_col": 1,
                "start_line": 1
              },
              "suggestion": null,
              "title": "Import resolution failed"
            }
          ],
          "type": "text"
        }
      ],
      "isError": false
    }
  },
  {
    "arguments": {
      "severity_filter": "errors"
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": {
            "argument": "severity_filter",
            "code": "invalid_input",
            "data": {
              "suggestion": "did you mean 'error'?"
            },
            "message": "Unknown severity 'errors' (available: error, warning, info)",
            "tool": "specforge.validate"
          },
          "type": "text"
        }
      ],
      "isError": true,
      "structuredContent": {
        "argument": "severity_filter",
        "code": "invalid_input",
        "data": {
          "suggestion": "did you mean 'error'?"
        },
        "message": "Unknown severity 'errors' (available: error, warning, info)",
        "tool": "specforge.validate"
      }
    }
  },
  {
    "arguments": {
      "lint": [
        "nonsense"
      ]
    },
    "result": {
      "_meta": "<absent>",
      "content": [
        {
          "text": {
            "argument": "lint",
            "code": "invalid_input",
            "message": "Unknown lint profile 'nonsense' (available: inferred, pedantic)",
            "tool": "specforge.validate"
          },
          "type": "text"
        }
      ],
      "isError": true,
      "structuredContent": {
        "argument": "lint",
        "code": "invalid_input",
        "message": "Unknown lint profile 'nonsense' (available: inferred, pedantic)",
        "tool": "specforge.validate"
      }
    }
  }
]
